Prevent code line wrapping

--- a/src/styles/components/_code.scss
+++ b/src/styles/components/_code.scss
@@ -36,6 +36,10 @@
     pre {
       margin: 0px;
     }
+
+    code {
+      white-space: pre;
+    }
   }
 
   // Emulating the CSS code generated by <SyntaxHighlighter/>
@@ -66,7 +70,7 @@
 
       text-rendering: optimizeLegibility;
       overflow-wrap: break-word;
-      white-space: pre-wrap;
+      white-space: pre;
       word-break: break-all;
       -webkit-font-smoothing: antialiased;
       text-size-adjust: 100%;
