--- a/src/styles/pages/_grade.scss
+++ b/src/styles/pages/_grade.scss
@@ -27,6 +27,7 @@
 
     &__right-panel {
       padding-top: 10px;
+      min-width: 0;
       &__tabs {
         width: inherit;
       }
